# panther

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  changeVersion.ps1  changelog.html  contributing.html  faq.html  genindex.html  hi.py  index.html  install.ps1  installation.html  model_visualization.html  objects.inv  panther.nn.linear_kernels.html  panther.tuner.SkAutoTuner.Configs.html  panther.tuner.SkAutoTuner.Searching.html  panther.tuner.SkAutoTuner.Visualizer.html  panther.tuner.SkAutoTuner.html  publishPyPi.ps1  py-modindex.html  pyproject.toml  quickstart.html  roadmap.html  search.html  searchindex.js
.github/workflows/: deploy-docs.yaml
_modules/: index.html
_modules/panther/linalg/: core.html
_sources/: changelog.rst  index.rst  panther.nn.linear_kernels.rst  panther.tuner.SkAutoTuner.Configs.rst  panther.tuner.SkAutoTuner.Searching.rst  panther.tuner.SkAutoTuner.Visualizer.rst  panther.tuner.SkAutoTuner.rst  quickstart.rst  roadmap.rst
_sources/api/: nn.rst  sketch.rst  tuner.rst
_sources/benchmarking/: sketched_convolutions.rst  sketched_linear_layers.rst
_sources/tutorials/: custom_sketching.rst  index.rst  matrix_decompositions.rst  performance_optimization.rst
_static/: custom.css
api/: linalg.html  nn.html  sketch.html  tuner.html  utils.html
benchmarking/: Attention.html  RandNLA.html  index.html  sketched_convolutions.html  sketched_linear_layers.html
docs/: benchmarks.rst  changelog.rst  conf.py  contributing.rst  faq.rst  hero.html  index.rst  installation.rst  panther.rst  quickstart.rst  requirements.txt  roadmap.rst
docs/advanced/: cuda_kernels.rst  custom_sketching.rst  distributed_training.rst  memory_optimization.rst  tensor_cores.rst
docs/api/: linalg.rst  nn.rst  sketch.rst  tuner.rst  utils.rst
docs/benchmarking/: Attention.rst  RandNLA.rst  index.rst
docs/examples/: autotuner_guide.rst  basic_usage.rst  bert_real_world.rst  custom_sketching.rst  index.rst  performance_benchmarks.rst  real_world_applications.rst  resnet_sketching.rst
docs/tutorials/: autotuning.rst  custom_sketching.rst  index.rst  matrix_decompositions.rst  neural_networks.rst  performance_optimization.rst  sketched_linear_layers.rst
manual_tests/: SKAutoTuner_basic_test.py  SKAutoTuner_resnet18_test.py  complex_config_visualizer_example.py  config_visualizer_example.py  model_config_visualization.html  plot_helpers.py  randAttention_timing.py  test_model_visualizer.py  test_visualizer.py  visualizer_example.py
panther/: __init__.py  add.py  random.py  tensor.py
panther/backends/: __init__.py  base.py  numpy_backend.py  torch_backend.py
panther/graphs/: linearCUDAvsTORCH.ipynb
panther/linalg/: __init__.py  core.py
panther/nn/: __init__.py  attention.py  conv2d.py  linear.py  linear_tr.py  pawXimpl.py  performers.py  srpe.py  tmp.py  xx.py
panther/sketch/: __init__.py  core.py  linear.py  linear_f.py
panther/tuner/: __init__.py  example_skautotuner.py
panther/utils/: SKAutoTuner.py  SKAutoTuner_test.py  __init__.py  add.py  add_f.py  compatibility.py  hello.py  padding.py
pawX/: CMakeLists.txt  Makefile  __init__.py  attention.cpp  attention.h  batch_matmul_cuda.cu  batch_matmul_tc.cu  bindings.cpp  build.ps1  clean.ps1  conv2d.cpp  conv2d.h  cqrrpt.cpp  cqrrpt.h  cuda_tensor_accessor.cuh  debug.cuh  experiment_utils.cpp  experiment_utils.h  linear.cpp  linear.h  linear_cuda.cu  linear_tc.cu  lltm.cpp  lltm.py  lltm_cpp.pyi  my_ext.cpp  pawX.pyi  rsvd.cpp  rsvd.h  setup.py  skops.cpp  skops.h  spre.cpp  spre.h  tiled_conv2d_cuda.cu  tiled_conv2d_cuda.h  timing.cu  timing.h  verify.py
tests/: bench_cqrrpt.py  bench_rsvd.py  plot_cqrrpt.py  test_accessor.py  test_add.py  test_count_skop.py  test_cqrrpt.py  test_gaussian_skop.py  test_pawX.py  test_rmha.py  test_rsvd.py  test_sjlt_skop.py  test_skconv2d.py  test_sketched_linear.py  test_sklinear_cpp.py  test_sklinear_python.py  test_skops.py  test_spskops.py  test_srht.py  test_tuner_layer_name_resolver.py  test_tuner_model_visualizer.py  test_tuner_optuna_search.py  test_tuner_param_spec.py  test_tuner_skautotuner.py
tests/Searching/: test_bayesian_optimization.py  test_evolutionary_algorithm.py  test_grid_search.py  test_hyperband.py  test_particle_swarm_optimization.py  test_random_search.py  test_simulated_annealing.py  test_tree_parzen_estimator.py
tests/notebooks/: attention.ipynb  attnetion.ipynb  backward-kernel-debug.ipynb  backward-kernel.ipynb  compare_linear_layers.ipynb  compare_linears.py  conv2d_comparison.ipynb  demo_notebook.ipynb  linear_comparison.ipynb  linear_model.ipynb  make_conv_test.ipynb  optimize_impl.ipynb  plot_conv_bench.ipynb  plot_conv_lines_bench.ipynb  plot_linear_bench.ipynb  profile.prof  sklinear-triton.ipynb  torch-compile.ipynb  triton-forward.ipynb
tutorials/: autotuning.html  custom_sketching.html  index.html  matrix_decompositions.html  neural_networks.html  performance_optimization.html  sketched_linear_layers.html
(+109 files in other folders)
