[tool.poetry]
name = "panther"
version = "0.1.0"
description = ""
authors = ["The Panther Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.5.1+cu124", source = "pytorch"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch"}
torchaudio = {version = "^2.5.1+cu124", source = "pytorch"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.13.0"
ruff = "^0.8.2"
pytest = "^8.3.4"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
ninja = "^1.11.1.3"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
