[tool.poetry]
name = "panther-ml"
version = "0.1.2"
description = ""
authors = ["The Panther Team"]
readme = "README.md"
include = ["pawX/**", "pawX/*.pyd"]

[[tool.poetry.packages]]
include = "pawX"
from = "."

[[tool.poetry.packages]]
include = "panther"
from = "."

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "2.6.0+cu124", source = "pytorch"}
torchvision = {version = "0.21.0+cu124", source = "pytorch"}
torchaudio = {version = "2.6.0+cu124", source = "pytorch"}
botorch = "^0.14.0"
matplotlib = "^3.10.3"
optuna = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.13.0"
ruff = "^0.8.2"
pytest = "^8.3.4"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
ninja = "^1.11.1.3"
types-setuptools = "^80.9.0.20250822"
pandas-stubs = "^2.3.2.250926"
types-psutil = "^7.1.3.20251130"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.3"
sphinx-design = "^0.6.1"
sphinx-autobuild = "^2025.1.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    # Suppress NumPy deprecation warnings from botorch (third-party library issue)
    "ignore:__array__ implementation doesn't accept a copy keyword:DeprecationWarning:botorch.optim.utils.numpy_utils",
]
